# winland

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md  winland.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI.md  CONFIG.md  FEATURES.md  GAME_MODE.md  RULES.md  TROUBLESHOOTING.md  WIDGETS.md  experimental-shell-replacement.md  game-mode.md
winland-cli/: Cargo.toml
winland-cli/src/: main.rs
winland-cli/widgets/: taskbar.slint
winland-config/: Cargo.toml
winland-config/src/: lib.rs
winland-core/: Cargo.toml
winland-core/src/: lib.rs
winland-daemon/: Cargo.toml
winland-daemon/src/: main.rs
winland-ipc/: Cargo.toml
winland-ipc/src/: lib.rs
winland-shell/: Cargo.toml
winland-shell/src/: main.rs
winland-win32/: Cargo.toml
winland-win32/src/: lib.rs  shell.rs
