[package]
name = "winland-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winland-core = { path = "../winland-core" }
winland-win32 = { path = "../winland-win32" }
