[package]
name = "winland-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
raw-window-handle.workspace = true
slint.workspace = true
slint-interpreter.workspace = true
spin_on.workspace = true
winland-config = { path = "../winland-config" }
winland-core = { path = "../winland-core" }
winland-ipc = { path = "../winland-ipc" }
winland-win32 = { path = "../winland-win32" }
