[package]
name = "winland-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winland-config = { path = "../winland-config" }
winland-core = { path = "../winland-core" }
winland-ipc = { path = "../winland-ipc" }
winland-win32 = { path = "../winland-win32" }
